# ai-explore

./: .gitignore  README.md  pyproject.toml
lsu_pylot/: functions.py  main.py  questions.py
lsu_pylot/embedding/: embed.ipynb  embed.py  embed_pineconde.ipynb  test_doc.md
